crates/sniff-test/tests/snapshots/fixtures__driver_node_limit.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "analysis-findings": [],
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "node_limit",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": null,
      "metadata": "[METADATA]",
      "package-name": null,
      "package-version": null,
      "target": null
    },
    "concrete-roots": 1,
    "dependencies": [],
    "dependency-cache": {
      "failed": 0,
      "hits": 0,
      "total": 0
    },
    "format-version": 3,
    "generic-roots": 0,
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "findings": [
          {
            "edge": null,
            "kind": "analysis-incomplete",
            "level": "deny",
            "reason": "reachability analysis halted at the 4-instance node limit before the call graph was exhausted",
            "span": "[FIXTURE]/src/lib.rs:24:1: 24:30",
            "target": null,
            "trace": []
          }
        ],
        "has-panic-docs": false,
        "root": "node_limit::deep_chain",
        "root-declaration": "[FIXTURE]/src/lib.rs:24:1",
        "root-kind": "concrete"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
