crates/sniff-test/tests/snapshots/fixtures__driver_panic_axioms.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "analysis-findings": [],
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "panic_axioms",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": null,
      "metadata": "[METADATA]",
      "package-name": null,
      "package-version": null,
      "target": null
    },
    "concrete-roots": 4,
    "counts": {
      "analysis-incomplete": 0,
      "cached-dependency-panics": 0,
      "compiler-asserts": 3,
      "documented-panics": 0,
      "indirect-call-boundaries": 0,
      "panic-invocations": 1,
      "trusted-panics": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "failed": 0,
      "hits": 0,
      "total": 0
    },
    "format-version": 2,
    "generic-roots": 0,
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "counts": {
          "analysis-incomplete": 0,
          "cached-dependency-panics": 0,
          "compiler-asserts": 1,
          "documented-panics": 0,
          "indirect-call-boundaries": 0,
          "panic-invocations": 0,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": "panic_axioms::division --assert-> compiler assert attempt to divide `total_size` (_1, argument 1) by zero",
            "kind": "compiler-assert",
            "level": "deny",
            "reason": "compiler assert",
            "span": "[FIXTURE]/src/lib.rs:2:5: 2:29",
            "target": "compiler assert attempt to divide `total_size` (_1, argument 1) by zero",
            "trace": [
              "[FIXTURE]/src/lib.rs:2:5: 2:29: panic_axioms::division --assert-> compiler assert attempt to divide `total_size` (_1, argument 1) by zero"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "panic_axioms::division",
        "root-declaration": "[FIXTURE]/src/lib.rs:1:1",
        "root-kind": "concrete"
      },
      {
        "counts": {
          "analysis-incomplete": 0,
          "cached-dependency-panics": 0,
          "compiler-asserts": 1,
          "documented-panics": 0,
          "indirect-call-boundaries": 0,
          "panic-invocations": 0,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": "panic_axioms::indexed --assert-> compiler assert index out of bounds: index `index` (_2, argument 2) may exceed length `_3` (temporary)",
            "kind": "compiler-assert",
            "level": "deny",
            "reason": "compiler assert",
            "span": "[FIXTURE]/src/lib.rs:10:5: 10:18",
            "target": "compiler assert index out of bounds: index `index` (_2, argument 2) may exceed length `_3` (temporary)",
            "trace": [
              "[FIXTURE]/src/lib.rs:10:5: 10:18: panic_axioms::indexed --assert-> compiler assert index out of bounds: index `index` (_2, argument 2) may exceed length `_3` (temporary)"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "panic_axioms::indexed",
        "root-declaration": "[FIXTURE]/src/lib.rs:9:1",
        "root-kind": "concrete"
      },
      {
        "counts": {
          "analysis-incomplete": 0,
          "cached-dependency-panics": 0,
          "compiler-asserts": 1,
          "documented-panics": 0,
          "indirect-call-boundaries": 0,
          "panic-invocations": 0,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": "panic_axioms::remainder --assert-> compiler assert attempt to calculate the remainder of `total_size` (_1, argument 1) with a zero divisor",
            "kind": "compiler-assert",
            "level": "deny",
            "reason": "compiler assert",
            "span": "[FIXTURE]/src/lib.rs:6:5: 6:28",
            "target": "compiler assert attempt to calculate the remainder of `total_size` (_1, argument 1) with a zero divisor",
            "trace": [
              "[FIXTURE]/src/lib.rs:6:5: 6:28: panic_axioms::remainder --assert-> compiler assert attempt to calculate the remainder of `total_size` (_1, argument 1) with a zero divisor"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "panic_axioms::remainder",
        "root-declaration": "[FIXTURE]/src/lib.rs:5:1",
        "root-kind": "concrete"
      },
      {
        "counts": {
          "analysis-incomplete": 0,
          "cached-dependency-panics": 0,
          "compiler-asserts": 0,
          "documented-panics": 0,
          "indirect-call-boundaries": 0,
          "panic-invocations": 1,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": "panic_axioms::todo_macro --macro-expansion-> macro core::std::todo",
            "kind": "panic-invocation",
            "level": "deny",
            "reason": "panic sink core::std::rt::panic_fmt",
            "span": "[FIXTURE]/src/lib.rs:14:5: 14:29",
            "target": "core::std::rt::panic_fmt",
            "trace": [
              "[FIXTURE]/src/lib.rs:14:5: 14:29: panic_axioms::todo_macro --macro-expansion-> macro core::std::todo",
              "[SYSROOT]/lib/rustlib/src/rust/library/core/src/macros/mod.rs:880:9: 880:82: macro core::std::todo --macro-expansion-> macro core::macros::panic",
              "[SYSROOT]/lib/rustlib/src/rust/library/core/src/macros/mod.rs:880:9: 880:82: macro core::macros::panic --macro-expansion-> macro core::std::panic::panic_2021",
              "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::std::panic::panic_2021 --direct-call-> core::std::rt::panic_fmt"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "panic_axioms::todo_macro",
        "root-declaration": "[FIXTURE]/src/lib.rs:13:1",
        "root-kind": "concrete"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
