crates/sniff-test/tests/snapshots/fixtures__driver_panic_requirements.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "analysis-findings": [],
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "panic_requirements",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": null,
      "metadata": "[METADATA]",
      "package-name": null,
      "package-version": null,
      "target": null
    },
    "concrete-roots": 6,
    "counts": {
      "analysis-incomplete": 0,
      "cached-dependency-panics": 0,
      "compiler-asserts": 0,
      "documented-panics": 6,
      "indirect-call-boundaries": 0,
      "panic-invocations": 0,
      "trusted-panics": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "failed": 0,
      "hits": 0,
      "total": 0
    },
    "format-version": 2,
    "generic-roots": 0,
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "counts": {
          "analysis-incomplete": 0,
          "cached-dependency-panics": 0,
          "compiler-asserts": 0,
          "documented-panics": 1,
          "indirect-call-boundaries": 0,
          "panic-invocations": 0,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": "panic_requirements::bullet_without_marker --direct-call-> panic_requirements::documented_ratio",
            "kind": "documented-panic",
            "level": "warn",
            "reason": "panic_requirements::documented_ratio documents when it may panic under # Panics",
            "span": "[FIXTURE]/src/lib.rs:31:5: 31:41",
            "target": "panic_requirements::documented_ratio",
            "trace": [
              "[FIXTURE]/src/lib.rs:31:5: 31:41: panic_requirements::bullet_without_marker --direct-call-> panic_requirements::documented_ratio"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "panic_requirements::bullet_without_marker",
        "root-declaration": "[FIXTURE]/src/lib.rs:29:1",
        "root-kind": "concrete"
      },
      {
        "counts": {
          "analysis-incomplete": 0,
          "cached-dependency-panics": 0,
          "compiler-asserts": 0,
          "documented-panics": 1,
          "indirect-call-boundaries": 0,
          "panic-invocations": 0,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": "panic_requirements::empty_marker --direct-call-> panic_requirements::documented_ratio",
            "kind": "documented-panic",
            "level": "warn",
            "reason": "panic_requirements::documented_ratio documents when it may panic under # Panics",
            "span": "[FIXTURE]/src/lib.rs:36:5: 36:41",
            "target": "panic_requirements::documented_ratio",
            "trace": [
              "[FIXTURE]/src/lib.rs:36:5: 36:41: panic_requirements::empty_marker --direct-call-> panic_requirements::documented_ratio"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "panic_requirements::empty_marker",
        "root-declaration": "[FIXTURE]/src/lib.rs:34:1",
        "root-kind": "concrete"
      },
      {
        "counts": {
          "analysis-incomplete": 0,
          "cached-dependency-panics": 0,
          "compiler-asserts": 0,
          "documented-panics": 1,
          "indirect-call-boundaries": 0,
          "panic-invocations": 0,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": "panic_requirements::empty_requirement --direct-call-> panic_requirements::documented_ratio",
            "kind": "documented-panic",
            "level": "warn",
            "reason": "panic_requirements::documented_ratio documents when it may panic under # Panics",
            "span": "[FIXTURE]/src/lib.rs:44:5: 44:41",
            "target": "panic_requirements::documented_ratio",
            "trace": [
              "[FIXTURE]/src/lib.rs:44:5: 44:41: panic_requirements::empty_requirement --direct-call-> panic_requirements::documented_ratio"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "panic_requirements::empty_requirement",
        "root-declaration": "[FIXTURE]/src/lib.rs:39:1",
        "root-kind": "concrete"
      },
      {
        "counts": {
          "analysis-incomplete": 0,
          "cached-dependency-panics": 0,
          "compiler-asserts": 0,
          "documented-panics": 1,
          "indirect-call-boundaries": 0,
          "panic-invocations": 0,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": "panic_requirements::safety_marker_does_not_satisfy_panic --direct-call-> panic_requirements::documented_ratio",
            "kind": "documented-panic",
            "level": "warn",
            "reason": "panic_requirements::documented_ratio documents when it may panic under # Panics",
            "span": "[FIXTURE]/src/lib.rs:53:5: 53:41",
            "target": "panic_requirements::documented_ratio",
            "trace": [
              "[FIXTURE]/src/lib.rs:53:5: 53:41: panic_requirements::safety_marker_does_not_satisfy_panic --direct-call-> panic_requirements::documented_ratio"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "panic_requirements::safety_marker_does_not_satisfy_panic",
        "root-declaration": "[FIXTURE]/src/lib.rs:47:1",
        "root-kind": "concrete"
      },
      {
        "counts": {
          "analysis-incomplete": 0,
          "cached-dependency-panics": 0,
          "compiler-asserts": 0,
          "documented-panics": 1,
          "indirect-call-boundaries": 0,
          "panic-invocations": 0,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": "panic_requirements::safety_marker_stops_partial_panic_block --direct-call-> panic_requirements::documented_ratio",
            "kind": "documented-panic",
            "level": "warn",
            "reason": "panic_requirements::documented_ratio documents when it may panic under # Panics",
            "span": "[FIXTURE]/src/lib.rs:62:5: 62:41",
            "target": "panic_requirements::documented_ratio",
            "trace": [
              "[FIXTURE]/src/lib.rs:62:5: 62:41: panic_requirements::safety_marker_stops_partial_panic_block --direct-call-> panic_requirements::documented_ratio"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "panic_requirements::safety_marker_stops_partial_panic_block",
        "root-declaration": "[FIXTURE]/src/lib.rs:56:1",
        "root-kind": "concrete"
      },
      {
        "counts": {
          "analysis-incomplete": 0,
          "cached-dependency-panics": 0,
          "compiler-asserts": 0,
          "documented-panics": 1,
          "indirect-call-boundaries": 0,
          "panic-invocations": 0,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": "panic_requirements::unnamed_marker --direct-call-> panic_requirements::documented_ratio",
            "kind": "documented-panic",
            "level": "warn",
            "reason": "panic_requirements::documented_ratio documents when it may panic under # Panics",
            "span": "[FIXTURE]/src/lib.rs:26:5: 26:41",
            "target": "panic_requirements::documented_ratio",
            "trace": [
              "[FIXTURE]/src/lib.rs:26:5: 26:41: panic_requirements::unnamed_marker --direct-call-> panic_requirements::documented_ratio"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "panic_requirements::unnamed_marker",
        "root-declaration": "[FIXTURE]/src/lib.rs:24:1",
        "root-kind": "concrete"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
