crates/sniff-test/tests/snapshots/fixtures__driver_safe_markers.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "analysis-findings": [],
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "safe_markers",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": null,
      "metadata": "[METADATA]",
      "package-name": null,
      "package-version": null,
      "target": null
    },
    "concrete-roots": 2,
    "counts": {
      "analysis-incomplete": 0,
      "cached-dependency-panics": 0,
      "compiler-asserts": 1,
      "documented-panics": 0,
      "indirect-call-boundaries": 0,
      "panic-invocations": 1,
      "trusted-panics": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "failed": 0,
      "hits": 0,
      "total": 0
    },
    "format-version": 2,
    "generic-roots": 0,
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "counts": {
          "analysis-incomplete": 0,
          "cached-dependency-panics": 0,
          "compiler-asserts": 0,
          "documented-panics": 0,
          "indirect-call-boundaries": 0,
          "panic-invocations": 1,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": "safe_markers::helper --macro-expansion-> macro core::std::assert",
            "kind": "panic-invocation",
            "level": "deny",
            "reason": "panic sink core::panicking::panic",
            "span": "[FIXTURE]/src/lib.rs:21:5: 21:18",
            "target": "core::panicking::panic",
            "trace": [
              "[FIXTURE]/src/lib.rs:17:5: 17:17: safe_markers::unsafe_call --direct-call-> safe_markers::helper",
              "[FIXTURE]/src/lib.rs:21:5: 21:18: safe_markers::helper --macro-expansion-> macro core::std::assert",
              "[FIXTURE]/src/lib.rs:21:5: 21:18: macro core::std::assert --direct-call-> core::panicking::panic"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "safe_markers::unsafe_call",
        "root-declaration": "[FIXTURE]/src/lib.rs:16:1",
        "root-kind": "concrete"
      },
      {
        "counts": {
          "analysis-incomplete": 0,
          "cached-dependency-panics": 0,
          "compiler-asserts": 1,
          "documented-panics": 0,
          "indirect-call-boundaries": 0,
          "panic-invocations": 0,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": "safe_markers::unsafe_ratio --assert-> compiler assert attempt to divide `total` (_1, argument 1) by zero",
            "kind": "compiler-assert",
            "level": "deny",
            "reason": "compiler assert",
            "span": "[FIXTURE]/src/lib.rs:8:5: 8:24",
            "target": "compiler assert attempt to divide `total` (_1, argument 1) by zero",
            "trace": [
              "[FIXTURE]/src/lib.rs:8:5: 8:24: safe_markers::unsafe_ratio --assert-> compiler assert attempt to divide `total` (_1, argument 1) by zero"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "safe_markers::unsafe_ratio",
        "root-declaration": "[FIXTURE]/src/lib.rs:7:1",
        "root-kind": "concrete"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
