crates/sniff-test/tests/snapshots/fixtures__driver_std_trait_impl_glob.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "crate-name": "std_trait_impl_glob"
    },
    "findings": [
      {
        "kind": "trusted-panic",
        "level": "warn",
        "reason": "alloc::std::vec::Vec::<T, A>::push documents when it may panic under # Panics",
        "root": "std_trait_impl_glob::put",
        "root-kind": "concrete",
        "span": "[FIXTURE]/src/lib.rs:9:5: 9:23",
        "target": "alloc::std::vec::Vec::<T, A>::push",
        "trace": [
          "[FIXTURE]/src/lib.rs:9:5: 9:23: std_trait_impl_glob::put --direct-call-> alloc::std::vec::Vec::<T, A>::push"
        ]
      }
    ],
    "format-version": 12,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "tool-version": "0.1.0"
  }
]
