crates/sniff-test/tests/snapshots/fixtures__driver_supertrait_dyn_dispatch.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "analysis-findings": [],
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "supertrait_dyn_dispatch",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": null,
      "metadata": "[METADATA]",
      "package-name": null,
      "package-version": null,
      "target": null
    },
    "concrete-roots": 2,
    "counts": {
      "analysis-incomplete": 0,
      "cached-dependency-panics": 0,
      "compiler-asserts": 0,
      "documented-panics": 0,
      "indirect-call-boundaries": 0,
      "panic-invocations": 2,
      "trusted-panics": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "failed": 0,
      "hits": 0,
      "total": 0
    },
    "format-version": 2,
    "generic-roots": 0,
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "counts": {
          "analysis-incomplete": 0,
          "cached-dependency-panics": 0,
          "compiler-asserts": 0,
          "documented-panics": 0,
          "indirect-call-boundaries": 0,
          "panic-invocations": 1,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": "<supertrait_dyn_dispatch::Widget as Super>::risky --macro-expansion-> macro core::std::assert",
            "kind": "panic-invocation",
            "level": "deny",
            "reason": "panic sink core::std::rt::panic_fmt",
            "span": "[FIXTURE]/src/lib.rs:13:9: 13:42",
            "target": "core::std::rt::panic_fmt",
            "trace": [
              "[FIXTURE]/src/lib.rs:13:9: 13:42: <supertrait_dyn_dispatch::Widget as Super>::risky --macro-expansion-> macro core::std::assert",
              "[FIXTURE]/src/lib.rs:13:9: 13:42: macro core::std::assert --macro-expansion-> macro core::std::panic::panic_2021",
              "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::std::panic::panic_2021 --direct-call-> core::std::rt::panic_fmt"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "<supertrait_dyn_dispatch::Widget as Super>::risky",
        "root-declaration": "[FIXTURE]/src/lib.rs:12:5",
        "root-kind": "concrete"
      },
      {
        "counts": {
          "analysis-incomplete": 0,
          "cached-dependency-panics": 0,
          "compiler-asserts": 0,
          "documented-panics": 0,
          "indirect-call-boundaries": 0,
          "panic-invocations": 1,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": "<supertrait_dyn_dispatch::Widget as Super>::risky --macro-expansion-> macro core::std::assert",
            "kind": "panic-invocation",
            "level": "deny",
            "reason": "panic sink core::std::rt::panic_fmt",
            "span": "[FIXTURE]/src/lib.rs:13:9: 13:42",
            "target": "core::std::rt::panic_fmt",
            "trace": [
              "[FIXTURE]/src/lib.rs:21:5: 21:23: supertrait_dyn_dispatch::call_supertrait_method --dyn-dispatch-vtable-entry-> <supertrait_dyn_dispatch::Widget as Super>::risky",
              "[FIXTURE]/src/lib.rs:13:9: 13:42: <supertrait_dyn_dispatch::Widget as Super>::risky --macro-expansion-> macro core::std::assert",
              "[FIXTURE]/src/lib.rs:13:9: 13:42: macro core::std::assert --macro-expansion-> macro core::std::panic::panic_2021",
              "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::std::panic::panic_2021 --direct-call-> core::std::rt::panic_fmt"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "supertrait_dyn_dispatch::call_supertrait_method",
        "root-declaration": "[FIXTURE]/src/lib.rs:19:1",
        "root-kind": "concrete"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
